--- a/NEWS
+++ b/NEWS
@@ -906,4 +906,8 @@ version 1.1.50: (2018-03-26)
 - Removed OffSet correction (regression case) (@test_differenfor phi in the BASiCS_TestDE function
 
 version 1.1.51: (2018-03-26)
-- Adjusted BASiCS_TestDE function to output data.frames containing same genes.
+- Adjusted BASiCS_TestDE function to output data.frames containing same genes.i
+
+version 1.1.52: (2018-04-09)
+- Added extra sentence to vignette describing the BASiCS_Data generation when SpikeInfo
+is not available
