--- a/NEWS
+++ b/NEWS
@@ -933,3 +933,6 @@ version 1.1.57: (2018-04-16)
 version 1.1.58: (2018-04-19)
 - Updates in vignette to fully incorporate the regression and non-spike
 BASiCS models.
+
+version 1.1.59: (2018-04-19)
+- Documentation of `RefFreq` in `BASiCS_Chain` class. 
