--- a/NEWS
+++ b/NEWS
@@ -936,3 +936,6 @@ BASiCS models.
 
 version 1.1.59: (2018-04-19)
 - Documentation of `RefFreq` in `BASiCS_Chain` class. 
+
+version 1.1.60: (2018-04-19)
+- Updated DESCRIPTION file to introduce residual over-dispersion testing
