--- a/NEWS
+++ b/NEWS
@@ -939,3 +939,7 @@ version 1.1.59: (2018-04-19)
 
 version 1.1.60: (2018-04-19)
 - Updated DESCRIPTION file to introduce residual over-dispersion testing
+
+version 1.1.61: (2018-04-19) - INCOMPLETE WORK
+- `Regression` is now a compulsory parameter in `BASiCS_MCMC`, hidden
+functions and SOME unit tests updated accordingly. 
