--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -168,13 +168,18 @@ rows must correspond to technical spike-in genes. Gene names must be stored as
 This vector must be specified in the same order of genes as in the 
 `Counts` matrix. 
 
-* `SpikeInfo`: a `data.frame` with $q-q_0$ rows. First column must contain the 
-names associated to the spike-in genes (as in `rownames(Counts)`). Second column 
-must contain the input number of molecules for the spike-in genes 
-(amount per cell).
+* `SpikeInfo` (optional): a `data.frame` with $q-q_0$ rows. First column must 
+contain the names associated to the spike-in genes (as in `rownames(Counts)`). 
+Second column must contain the input number of molecules for the spike-in genes 
+(amount per cell). If a value for this parameter is not provided when calling
+`newBASiCS_Data`, `SpikeInfo` is set as `NULL` as a default value. In those 
+cases, the `BatchInfo` argument has to be provided to allow using the no-spikes
+implementation of BASiCS. 
 
 * `BatchInfo` (optional): vector of length $n$ to indicate batch structure 
-(whenever cells have been processed using multiple batches). 
+(whenever cells have been processed using multiple batches). If a value for this 
+parameter is not provided when calling `newBASiCS_Data`, BASiCS will assume
+the data contains a single batch of samples. 
 
 For example, the following code generates a synthetic dataset with 50 genes 
 (40 biological and 10 spike-in) and 40 cells. 
