--- a/NEWS
+++ b/NEWS
@@ -951,3 +951,7 @@ functions, documentation and unit tests updated accordingly.
 - `BASiCS_Filter` adapted to no-spikes case and minor bug resolved
 - Added unit test for `BASiCS_Filter`
 - Minor bug fixed for no-spikes case in `BASiCS_DenoisedCounts`
+
+version 1.1.63: (2018-04-27)
+- Extra warning message added when `scran` normalisation fails to produce
+positive size factors
