--- a/NEWS
+++ b/NEWS
@@ -955,3 +955,11 @@ functions, documentation and unit tests updated accordingly.
 version 1.1.63: (2018-04-27)
 - Extra warning message added when `scran` normalisation fails to produce
 positive size factors
+
+version 1.3.1: (2018-05-21)
+- Unit tests created for selected C++ functions (`Hidden_rDirichlet` and
+`Hidden_muUpdate`)
+- Updated unit tests in spike-in parameter estimation to have tolerance
+(TEMPORARY FIX)
+- Minor updates in `makeExampleBASiCS_Data` and `newBASiCS_Data` function 
+to allow different spike-in types (as in `SingleCellExperiment`)
