--- a/NEWS
+++ b/NEWS
@@ -963,3 +963,6 @@ version 1.3.1: (2018-05-21)
 (TEMPORARY FIX)
 - Minor updates in `makeExampleBASiCS_Data` and `newBASiCS_Data` function 
 to allow different spike-in types (as in `SingleCellExperiment`)
+
+version 1.3.2: (2018-05-21)
+- Version bump only
