--- a/NEWS
+++ b/NEWS
@@ -966,3 +966,6 @@ to allow different spike-in types (as in `SingleCellExperiment`)
 
 version 1.3.2: (2018-05-21)
 - Version bump only
+
+version 1.3.3: (2018-05-21)
+- Missing line added to test_data_examples.R
