--- a/NEWS
+++ b/NEWS
@@ -955,3 +955,7 @@ functions, documentation and unit tests updated accordingly.
 version 1.1.63: (2018-04-27)
 - Extra warning message added when `scran` normalisation fails to produce
 positive size factors
+
+version 1.2.1: (2018-06-05)
+- Updated unit tests in spike-in parameter estimation to have tolerance
+- Extended test in test_data_examples.R
