--- a/NEWS
+++ b/NEWS
@@ -969,3 +969,6 @@ version 1.3.2: (2018-05-21)
 
 version 1.3.3: (2018-05-21)
 - Missing line added to test_data_examples.R
+
+version 1.3.5: (2018-08-31)
+- Updated reference to latest paper
