--- a/NEWS
+++ b/NEWS
@@ -972,3 +972,6 @@ version 1.3.3: (2018-05-21)
 
 version 1.3.5: (2018-08-31)
 - Updated reference to latest paper
+
+version 1.3.6: (2018-09-04)
+- Updated CITATION file
