--- a/NEWS
+++ b/NEWS
@@ -975,3 +975,6 @@ version 1.3.5: (2018-08-31)
 
 version 1.3.6: (2018-09-04)
 - Updated CITATION file
+
+version 1.3.7: (2018-09-05)
+- Commit to activate Travis/codecov
