--- a/NEWS
+++ b/NEWS
@@ -978,3 +978,6 @@ version 1.3.6: (2018-09-04)
 
 version 1.3.7: (2018-09-05)
 - Commit to activate Travis/codecov
+
+version 1.3.8: (2018-09-05)
+- Updated README.md (Travis/codecov badges) + updated citation to Cell Systems
