--- a/NEWS
+++ b/NEWS
@@ -981,3 +981,8 @@ version 1.3.7: (2018-09-05)
 
 version 1.3.8: (2018-09-05)
 - Updated README.md (Travis/codecov badges) + updated citation to Cell Systems
+
+version 1.3.8: (2018-09-05)
+- Changed raw data accessor to 'counts' instead of 'assay'
+- makeExampleBASiCS_Data now generates 30 cells instead of 20
+- Updated unit tests to match these 30 cells
