--- a/NEWS
+++ b/NEWS
@@ -991,3 +991,6 @@ version 1.3.10: (2018-09-28)
 - Prevent BASiCS_Chain from crashing when StoreAdapt=TRUE for the regression case
 - Prevent plot function errors
 - Updated documentation using roxygen2
+
+version 1.3.11: (2018-09-30)
+- Alan added as contributor
