--- a/NEWS
+++ b/NEWS
@@ -994,3 +994,6 @@ version 1.3.10: (2018-09-28)
 
 version 1.3.11: (2018-09-30)
 - Alan added as contributor
+
+version 1.3.13: (2018-09-30)
+- Some Rd files generated again
