--- a/NEWS
+++ b/NEWS
@@ -997,3 +997,9 @@ version 1.3.11: (2018-09-30)
 
 version 1.3.13: (2018-09-30)
 - Some Rd files generated again
+
+version 1.3.14: (2018-09-30)
+- Updated version to trigger build
+
+version 1.3.15: (2018-10-01)
+- Adjusted unit test reference values 
