--- a/NEWS
+++ b/NEWS
@@ -997,3 +997,6 @@ version 1.3.11: (2018-09-30)
 
 version 1.3.13: (2018-09-30)
 - Some Rd files generated again
+
+version 1.3.15: (2018-10-07)
+- Fixed bug when storing chains in the non-spikes case
