--- a/NEWS
+++ b/NEWS
@@ -1000,3 +1000,6 @@ version 1.3.13: (2018-09-30)
 
 version 1.3.15: (2018-10-07)
 - Fixed bug when storing chains in the non-spikes case
+
+version 1.3.16: (2018-10-08)
+- Reduce checks for Data that was not generated with the newBASiCS_Data function
