--- a/NEWS
+++ b/NEWS
@@ -1003,3 +1003,6 @@ version 1.3.15: (2018-10-07)
 
 version 1.3.16: (2018-10-08)
 - Reduce checks for Data that was not generated with the newBASiCS_Data function
+
+version 1.3.17: (2018-10-11)
+- New unit tests for different argument settings for the BASiCS_MCMC function
