--- a/NEWS
+++ b/NEWS
@@ -1012,3 +1012,7 @@ version 1.3.18: (2018-10-15)
 - `SingleCellExperiment::` added to all calls of `isSpike`
 - Extra input check in `BASiCS_MCMC` to avoid issues due to multiple types of
 spike-ins being present in the data. 
+
+version 1.3.19: (2018-10-16)
+- Replacement of `R::lgammafn` by `std::lgamma` in c++ code 
+(great speed-up! with thanks to Shian Su (@Shians))
