--- a/NEWS
+++ b/NEWS
@@ -1013,6 +1013,9 @@ version 1.3.18: (2018-10-15)
 - Extra input check in `BASiCS_MCMC` to avoid issues due to multiple types of
 spike-ins being present in the data. 
 
-version 1.3.19: (2018-10-16)
+version 1.3.19: (2018-10-18)
 - Replacement of `R::lgammafn` by `std::lgamma` in c++ code 
 (great speed-up! with thanks to Shian Su (@Shians))
+
+version 1.3.20: (2018-10-18)
+- Minor updates to README and vignette (e.g. to include BASiCS sticker)
