--- a/vignettes/BASiCS.Rmd
+++ b/vignettes/BASiCS.Rmd
@@ -38,6 +38,8 @@ these experiments are prone to high levels of technical noise, creating new
 challenges for identifying genes that show genuine heterogeneous expression 
 within the group of cells under study. 
 
+<img src="./BASiCS_sticker.png" height="300px" width="300px"> 
+
 BASiCS (**B**ayesian **A**nalysis of **Si**ngle-**C**ell **S**equencing data) 
 is an integrated Bayesian hierarchical model that propagates statistical 
 uncertainty by simultaneously performing data normalisation (global scaling), 
@@ -667,25 +669,29 @@ are described in @vallejos2015basics, @vallejos2016beyond and @eling2018correcti
 
 # Acknowledgements
 
-We thank several members of the Marioni laboratory (EMBL-EBI; CRUK-CI) for 
-support and discussions throughout the development of this R library. 
-In particular, we are grateful to Aaron Lun (LTLA) for advise and 
-support during the preparation the Bioconductor submission. 
-
-We also acknowledge feedback and contributions from (Github aliases provided 
-within parenthesis): Ben Dulken (bdulken), Chang Xu (xuchang116), 
-Danilo Horta (Horta), Dmitriy Zhukov (dvzhukov), 
-Jens Preu&szlig;ner (jenzopr), Joanna Dreux (Joannacodes), 
-Kevin Rue-Albrecht (kevinrue), Luke Zappia (lazappi), Nitesh Turaga (nturaga),
-Mike Morgan (MikeDMorgan), Muad Abd El Hay (Cumol), Simon Anders (s-andrews), 
-Shian Su (Shians), Yongchao Ge and Yuan Cao (yuancao90), among others. 
-
 This work has been funded by the MRC Biostatistics Unit (MRC grant no. 
 MRC_MC_UP_0801/1; Catalina Vallejos and Sylvia Richardson), EMBL European 
 Bioinformatics Institute (core European Molecular Biology Laboratory funding; 
 Catalina Vallejos, Nils Eling and John Marioni), CRUK Cambridge Institute 
 (core CRUK funding; John Marioni) and The Alan Turing Institute (EPSRC grant no. 
 EP/N510129/1; Catalina Vallejos). 
+
+
+# BASiCS *hall of fame*
+
+We thank several members of the Marioni laboratory (EMBL-EBI; CRUK-CI) for 
+support and discussions throughout the development of this R library. 
+In particular, we are grateful to Aaron Lun (LTLA) for advise and 
+support during the preparation the Bioconductor submission. 
+
+We also acknowledge feedback, bug reports and contributions from (Github aliases 
+provided within parenthesis): Ben Dulken (bdulken), Chang Xu (xuchang116), 
+Danilo Horta (Horta), Dmitriy Zhukov (dvzhukov), Jens Preu&szlig;ner (jenzopr), 
+Joanna Dreux (Joannacodes), Kevin Rue-Albrecht (kevinrue), 
+Luke Zappia (lazappi), Nitesh Turaga (nturaga), Mike Morgan (MikeDMorgan), 
+Muad Abd El Hay (Cumol), Simon Anders (s-andrews), Shian Su (Shians), 
+Yongchao Ge and Yuan Cao (yuancao90), among others. 
+
 
 ***
 
